# trabalho-3-2-dna-profiler-ewertonfsl

./: CMakeLists.txt  README.md
data/: data.csv  data_2.csv  sequence_derick.txt  sequence_ewerton.txt  sequence_fernandes.txt  sequence_no_match_1.txt  sequence_no_match_2.txt  testes.txt
include/: Dados.hpp  InterfaceUsuario.hpp  Perfil.hpp
src/: Dados.cpp  InterfaceUsuario.cpp  main.cpp
