cmake_minimum_required(VERSION 3.5)
project(DNA_profiler VERSION 0.1 LANGUAGES CXX )


### Execut치vel
# Diret칩rio contendo os .hpp
include_directories( include )

# Cria um execut치vel com nome "dna_profiler", adiciona neste execut치vel os arquivos src/Dados.cpp src/InterfaceUsuario.cpp src/Resultados.cpp
add_executable( dna_profiler
                src/main.cpp
                src/Dados.cpp
                src/InterfaceUsuario.cpp
                src/Perfil.cpp )
# The end
